# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[tool.poetry]
name = "klaatu"
version = "0.1.0"
description = ""
authors = ["Benjamin Forehand Jr <bforehand@mozilla.com>"]
license = "Mozilla Public License Version 2.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
disable_error_code = "attr-defined"
disallow_untyped_calls = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_error_codes = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.poetry.dependencies]
python = "^3.11"
pydocstyle = "^6.3.0"
selenium = "^4.17.2"
pytest-bdd = "^7.0.1"
pytest-firefox = "^0.1.1"
pytest-selenium = "^4.1.0"
black = "^24.1.1"
pytest-rerunfailures = "^13.0"
mypy = "^1.8.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
beautifulsoup4 = "^4.12.3"
pytest-repeat = "^0.9.3"
pytest-simplehttpserver = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
